Version 2.1.215
    Fixed Coal Blocks and potentially other fuel sources not showing burning animation to players (see notes)
    Level up broadcasts from level milestones will now be visible to the player who achieved them
    Fixed a bug where hovering over skill descriptions did not display anything (thanks Greymagic27)
    Added Dripstone to experience.yml (thanks Greymagic27)
    Added Mangrove_Log to experience.yml (should fix behavior for tree-feller etc)
    Item in main hand is now used for Tree Feller drops (thanks destro174)

    NOTES:
    The burning animation bug is actually in Spigot, it takes an int for setBurnTime when it really should only take a short as the game is expecting a short value, I implemented a hacky workaround via Math.min
    There is a bug where you may lose your config comments, this will be complex to solve, for now you can check our GitHub for the configs with comments.

Version 2.1.214
    Temporarily removed FakePlayerAnimationEvent (see notes)
    Players can now see their own level up broadcasts

    NOTES:
    Spigot updated PlayerAnimationEvent with an API break between versions 1.18 and 1.19, as a temporary fix for mcMMO to be able to support both of these
    Minecraft versions I have temporarily removed FakePlayerAnimationEvent. I am working on a fix to dynamically use the correct API depending on the version of MC
    as many people will likely be stuck on 1.18 for a while.
    FakePlayerAnimationEvent existed to circumvent false positives on anti-cheat plugins such as NoCheat, however
    I am unsure if it is still needed and removing it may have no ill effects.. however I cannot be certain.
    Anti-cheat plugin authors should be informed to update if you run into false positives with mcMMO after this update so they can make the appropriate changes.
Version 2.1.213
    Updated various mechanics to recognize and understand the new blocks
    Added 'Packed_Mud' to mining xp
    Added 'Mud_Bricks' to mining xp