@@ -2,6 +2,7 @@ package com.gmail.nossr50.util;
 
 import com.gmail.nossr50.config.experience.ExperienceConfig;
 import com.gmail.nossr50.config.party.ItemWeightConfig;
+import com.gmail.nossr50.datatypes.player.McMMOPlayer;
 import com.gmail.nossr50.datatypes.treasure.EnchantmentWrapper;
 import com.gmail.nossr50.datatypes.treasure.FishingTreasureBook;
 import com.gmail.nossr50.locale.LocaleLoader;
@@ -178,18 +179,12 @@ public final class ItemUtils {
         return mcMMO.getMaterialMapStore().isPickAxe(item.getType().getKey().getKey());
     }
 
-    /**
-     * Checks if the item counts as unarmed.
-     *
-     * @param item Item to check
-     * @return true if the item counts as unarmed, false otherwise
-     */
-    public static boolean isUnarmed(ItemStack item) {
+    public static boolean isUnarmed(@NotNull ItemStack itemInMainHand) {
         if (mcMMO.p.getGeneralConfig().getUnarmedItemsAsUnarmed()) {
-            return !isMinecraftTool(item);
+            return !isMinecraftTool(itemInMainHand);
         }
 
-        return item.getType() == Material.AIR;
+        return itemInMainHand.getType() == Material.AIR;
     }
 
     /**
